--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ button:focus-visible {
 /* row ------------------- */
 .row {
   --bs-gutter-x: -1.5rem !important;
+  --bs-gutter-x:0rem
 }
 /* ----------------------- */
 
